compiler/ANTLR4/CMinusParser.py
# Generated from CMinus.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CMinusParser ( Parser ):

    grammarFileName = "CMinus.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'void'", "'int'", "'if'", 
                     "'else'", "'repeat'", "'break'", "'until'", "'return'", 
                     "'=='", "';'", "','", "'['", "']'", "'('", "')'", "'{'", 
                     "'}'", "'+'", "'-'", "'*'", "'='", "'<'" ]

    symbolicNames = [ "<INVALID>", "COMMENT", "VOID", "INT", "IF", "ELSE", 
                      "REPEAT", "BREAK", "UNTIL", "RETURN", "EQ", "SEMICOLON", 
                      "COMMA", "LBRACKET", "RBRACKET", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "PLUS", "MINUS", "MULTIPLY", "ASSIGN", 
                      "LT", "NUM", "ID", "INVALID_TOKEN", "WHITESPACE" ]

    RULE_program = 0
    RULE_declarationList = 1
    RULE_declaration = 2
    RULE_declarationInitial = 3
    RULE_declarationPrime = 4
    RULE_varDeclarationPrime = 5
    RULE_funDeclarationPrime = 6
    RULE_typeSpecifier = 7
    RULE_params = 8
    RULE_paramList = 9
    RULE_param = 10
    RULE_paramPrime = 11
    RULE_compoundStmt = 12
    RULE_statementList = 13
    RULE_statement = 14
    RULE_expressionStmt = 15
    RULE_selectionStmt = 16
    RULE_iterationStmt = 17
    RULE_returnStmt = 18
    RULE_returnStmtPrime = 19
    RULE_expression = 20
    RULE_b = 21
    RULE_h = 22
    RULE_simpleExpressionZegond = 23
    RULE_simpleExpressionPrime = 24
    RULE_c = 25
    RULE_relop = 26
    RULE_additiveExpression = 27
    RULE_additiveExpressionPrime = 28
    RULE_additiveExpressionZegond = 29
    RULE_d = 30
    RULE_addop = 31
    RULE_term = 32
    RULE_termPrime = 33
    RULE_termZegond = 34
    RULE_g = 35
    RULE_factor = 36
    RULE_varCallPrime = 37
    RULE_varPrime = 38
    RULE_factorPrime = 39
    RULE_factorZegond = 40
    RULE_args = 41
    RULE_argList = 42
    RULE_argListPrime = 43

    ruleNames =  [ "program", "declarationList", "declaration", "declarationInitial", 
                   "declarationPrime", "varDeclarationPrime", "funDeclarationPrime", 
                   "typeSpecifier", "params", "paramList", "param", "paramPrime", 
                   "compoundStmt", "statementList", "statement", "expressionStmt", 
                   "selectionStmt", "iterationStmt", "returnStmt", "returnStmtPrime", 
                   "expression", "b", "h", "simpleExpressionZegond", "simpleExpressionPrime", 
                   "c", "relop", "additiveExpression", "additiveExpressionPrime", 
                   "additiveExpressionZegond", "d", "addop", "term", "termPrime", 
                   "termZegond", "g", "factor", "varCallPrime", "varPrime", 
                   "factorPrime", "factorZegond", "args", "argList", "argListPrime" ]

    EOF = Token.EOF
    COMMENT=1
    VOID=2
    INT=3
    IF=4
    ELSE=5
    REPEAT=6
    BREAK=7
    UNTIL=8
    RETURN=9
    EQ=10
    SEMICOLON=11
    COMMA=12
    LBRACKET=13
    RBRACKET=14
    LPAREN=15
    RPAREN=16
    LBRACE=17
    RBRACE=18
    PLUS=19
    MINUS=20
    MULTIPLY=21
    ASSIGN=22
    LT=23
    NUM=24
    ID=25
    INVALID_TOKEN=26
    WHITESPACE=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarationList(self):
            return self.getTypedRuleContext(CMinusParser.DeclarationListContext,0)


        def getRuleIndex(self):
            return CMinusParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = CMinusParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.declarationList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(CMinusParser.DeclarationContext,0)


        def declarationList(self):
            return self.getTypedRuleContext(CMinusParser.DeclarationListContext,0)


        def getRuleIndex(self):
            return CMinusParser.RULE_declarationList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarationList" ):
                listener.enterDeclarationList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarationList" ):
                listener.exitDeclarationList(self)




    def declarationList(self):

        localctx = CMinusParser.DeclarationListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declarationList)
        try:
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2, 3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.declaration()
                self.state = 91
                self.declarationList()
                pass
            elif token in [-1, 4, 6, 7, 9, 11, 15, 17, 18, 24, 25]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarationInitial(self):
            return self.getTypedRuleContext(CMinusParser.DeclarationInitialContext,0)


        def declarationPrime(self):
            return self.getTypedRuleContext(CMinusParser.DeclarationPrimeContext,0)


        def getRuleIndex(self):
            return CMinusParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = CMinusParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.declarationInitial()
            self.state = 97
            self.declarationPrime()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationInitialContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(CMinusParser.TypeSpecifierContext,0)


        def ID(self):
            return self.getToken(CMinusParser.ID, 0)

        def getRuleIndex(self):
            return CMinusParser.RULE_declarationInitial

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarationInitial" ):
                listener.enterDeclarationInitial(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarationInitial" ):
                listener.exitDeclarationInitial(self)




    def declarationInitial(self):

        localctx = CMinusParser.DeclarationInitialContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declarationInitial)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.typeSpecifier()
            self.state = 100
            self.match(CMinusParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationPrimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funDeclarationPrime(self):
            return self.getTypedRuleContext(CMinusParser.FunDeclarationPrimeContext,0)


        def varDeclarationPrime(self):
            return self.getTypedRuleContext(CMinusParser.VarDeclarationPrimeContext,0)


        def getRuleIndex(self):
            return CMinusParser.RULE_declarationPrime

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarationPrime" ):
                listener.enterDeclarationPrime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarationPrime" ):
                listener.exitDeclarationPrime(self)




    def declarationPrime(self):

        localctx = CMinusParser.DeclarationPrimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declarationPrime)
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.funDeclarationPrime()
                pass
            elif token in [11, 13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.varDeclarationPrime()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationPrimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACKET(self):
            return self.getToken(CMinusParser.LBRACKET, 0)

        def NUM(self):
            return self.getToken(CMinusParser.NUM, 0)

        def RBRACKET(self):
            return self.getToken(CMinusParser.RBRACKET, 0)

        def SEMICOLON(self):
            return self.getToken(CMinusParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return CMinusParser.RULE_varDeclarationPrime

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclarationPrime" ):
                listener.enterVarDeclarationPrime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclarationPrime" ):
                listener.exitVarDeclarationPrime(self)




    def varDeclarationPrime(self):

        localctx = CMinusParser.VarDeclarationPrimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varDeclarationPrime)
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.match(CMinusParser.LBRACKET)
                self.state = 107
                self.match(CMinusParser.NUM)
                self.state = 108
                self.match(CMinusParser.RBRACKET)
                self.state = 109
                self.match(CMinusParser.SEMICOLON)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.match(CMinusParser.SEMICOLON)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunDeclarationPrimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(CMinusParser.LPAREN, 0)

        def params(self):
            return self.getTypedRuleContext(CMinusParser.ParamsContext,0)


        def RPAREN(self):
            return self.getToken(CMinusParser.RPAREN, 0)

        def compoundStmt(self):
            return self.getTypedRuleContext(CMinusParser.CompoundStmtContext,0)


        def getRuleIndex(self):
            return CMinusParser.RULE_funDeclarationPrime

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunDeclarationPrime" ):
                listener.enterFunDeclarationPrime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunDeclarationPrime" ):
                listener.exitFunDeclarationPrime(self)




    def funDeclarationPrime(self):

        localctx = CMinusParser.FunDeclarationPrimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funDeclarationPrime)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(CMinusParser.LPAREN)
            self.state = 114
            self.params()
            self.state = 115
            self.match(CMinusParser.RPAREN)
            self.state = 116
            self.compoundStmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeSpecifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(CMinusParser.INT, 0)

        def VOID(self):
            return self.getToken(CMinusParser.VOID, 0)

        def getRuleIndex(self):
            return CMinusParser.RULE_typeSpecifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeSpecifier" ):
                listener.enterTypeSpecifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeSpecifier" ):
                listener.exitTypeSpecifier(self)




    def typeSpecifier(self):

        localctx = CMinusParser.TypeSpecifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_typeSpecifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            _la = self._input.LA(1)
            if not(_la==2 or _la==3):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(CMinusParser.INT, 0)

        def ID(self):
            return self.getToken(CMinusParser.ID, 0)

        def paramPrime(self):
            return self.getTypedRuleContext(CMinusParser.ParamPrimeContext,0)


        def paramList(self):
            return self.getTypedRuleContext(CMinusParser.ParamListContext,0)


        def VOID(self):
            return self.getToken(CMinusParser.VOID, 0)

        def getRuleIndex(self):
            return CMinusParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)




    def params(self):

        localctx = CMinusParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_params)
        try:
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.match(CMinusParser.INT)
                self.state = 121
                self.match(CMinusParser.ID)
                self.state = 122
                self.paramPrime()
                self.state = 123
                self.paramList()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.match(CMinusParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(CMinusParser.COMMA, 0)

        def param(self):
            return self.getTypedRuleContext(CMinusParser.ParamContext,0)


        def paramList(self):
            return self.getTypedRuleContext(CMinusParser.ParamListContext,0)


        def getRuleIndex(self):
            return CMinusParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)




    def paramList(self):

        localctx = CMinusParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_paramList)
        try:
            self.state = 133
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.match(CMinusParser.COMMA)
                self.state = 129
                self.param()
                self.state = 130
                self.paramList()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarationInitial(self):
            return self.getTypedRuleContext(CMinusParser.DeclarationInitialContext,0)


        def paramPrime(self):
            return self.getTypedRuleContext(CMinusParser.ParamPrimeContext,0)


        def getRuleIndex(self):
            return CMinusParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)




    def param(self):

        localctx = CMinusParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.declarationInitial()
            self.state = 136
            self.paramPrime()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamPrimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACKET(self):
            return self.getToken(CMinusParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(CMinusParser.RBRACKET, 0)

        def getRuleIndex(self):
            return CMinusParser.RULE_paramPrime

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamPrime" ):
                listener.enterParamPrime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamPrime" ):
                listener.exitParamPrime(self)




    def paramPrime(self):

        localctx = CMinusParser.ParamPrimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_paramPrime)
        try:
            self.state = 141
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.match(CMinusParser.LBRACKET)
                self.state = 139
                self.match(CMinusParser.RBRACKET)
                pass
            elif token in [12, 16]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompoundStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(CMinusParser.LBRACE, 0)

        def declarationList(self):
            return self.getTypedRuleContext(CMinusParser.DeclarationListContext,0)


        def statementList(self):
            return self.getTypedRuleContext(CMinusParser.StatementListContext,0)


        def RBRACE(self):
            return self.getToken(CMinusParser.RBRACE, 0)

        def getRuleIndex(self):
            return CMinusParser.RULE_compoundStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompoundStmt" ):
                listener.enterCompoundStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompoundStmt" ):
                listener.exitCompoundStmt(self)




    def compoundStmt(self):

        localctx = CMinusParser.CompoundStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_compoundStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(CMinusParser.LBRACE)
            self.state = 144
            self.declarationList()
            self.state = 145
            self.statementList()
            self.state = 146
            self.match(CMinusParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(CMinusParser.StatementContext,0)


        def statementList(self):
            return self.getTypedRuleContext(CMinusParser.StatementListContext,0)


        def getRuleIndex(self):
            return CMinusParser.RULE_statementList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementList" ):
                listener.enterStatementList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementList" ):
                listener.exitStatementList(self)




    def statementList(self):

        localctx = CMinusParser.StatementListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_statementList)
        try:
            self.state = 152
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 6, 7, 9, 11, 15, 17, 24, 25]:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.statement()
                self.state = 149
                self.statementList()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressionStmt(self):
            return self.getTypedRuleContext(CMinusParser.ExpressionStmtContext,0)


        def compoundStmt(self):
            return self.getTypedRuleContext(CMinusParser.CompoundStmtContext,0)


        def selectionStmt(self):
            return self.getTypedRuleContext(CMinusParser.SelectionStmtContext,0)


        def iterationStmt(self):
            return self.getTypedRuleContext(CMinusParser.IterationStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(CMinusParser.ReturnStmtContext,0)


        def getRuleIndex(self):
            return CMinusParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = CMinusParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_statement)
        try:
            self.state = 159
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7, 11, 15, 24, 25]:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.expressionStmt()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.compoundStmt()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 156
                self.selectionStmt()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 4)
                self.state = 157
                self.iterationStmt()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 5)
                self.state = 158
                self.returnStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(CMinusParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(CMinusParser.SEMICOLON, 0)

        def BREAK(self):
            return self.getToken(CMinusParser.BREAK, 0)

        def getRuleIndex(self):
            return CMinusParser.RULE_expressionStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionStmt" ):
                listener.enterExpressionStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionStmt" ):
                listener.exitExpressionStmt(self)




    def expressionStmt(self):

        localctx = CMinusParser.ExpressionStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_expressionStmt)
        try:
            self.state = 167
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15, 24, 25]:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self.expression()
                self.state = 162
                self.match(CMinusParser.SEMICOLON)
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.match(CMinusParser.BREAK)
                self.state = 165
                self.match(CMinusParser.SEMICOLON)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 166
                self.match(CMinusParser.SEMICOLON)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectionStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(CMinusParser.IF, 0)

        def LPAREN(self):
            return self.getToken(CMinusParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(CMinusParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(CMinusParser.RPAREN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CMinusParser.StatementContext)
            else:
                return self.getTypedRuleContext(CMinusParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(CMinusParser.ELSE, 0)

        def getRuleIndex(self):
            return CMinusParser.RULE_selectionStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectionStmt" ):
                listener.enterSelectionStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectionStmt" ):
                listener.exitSelectionStmt(self)




    def selectionStmt(self):

        localctx = CMinusParser.SelectionStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_selectionStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(CMinusParser.IF)
            self.state = 170
            self.match(CMinusParser.LPAREN)
            self.state = 171
            self.expression()
            self.state = 172
            self.match(CMinusParser.RPAREN)
            self.state = 173
            self.statement()
            self.state = 174
            self.match(CMinusParser.ELSE)
            self.state = 175
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IterationStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REPEAT(self):
            return self.getToken(CMinusParser.REPEAT, 0)

        def statement(self):
            return self.getTypedRuleContext(CMinusParser.StatementContext,0)


        def UNTIL(self):
            return self.getToken(CMinusParser.UNTIL, 0)

        def LPAREN(self):
            return self.getToken(CMinusParser.LPAREN, 0)
